# eolie

./: .gitignore  convert_ui.sh  meson.build  org.gnome.Eolie.json  python3-modules.json
data/: eolie.gresource.xml  meson.build
data/ui/: Shortcuts.blp  about_dialog.blp  bookmark_edit.blp  bookmark_rating_widget.blp  dialog_clear_data.blp  dialog_credentials.blp  dialog_import_bookmarks.blp  dialog_modify_ua.blp  dialog_notifications.blp  dialog_search_engine.blp  languages_menu.blp  popover_credentials.blp  popover_downloads.blp  popover_geolocation.blp  popover_images.blp  popover_java_script.blp  popover_uri.blp  popover_web_view.blp  quit_dialog.blp  row_download.blp  scripts_menu.blp  settings_dialog.blp  shortcuts.blp  sites_manager_child.blp  toolbar_actions.blp  toolbar_end.blp  toolbar_menu.blp
eolie/: application.py  container_reading.py  container_webview.py  content_blocker.py  context.py  dialog_clear_data.py  dialog_credentials.py  dialog_notifications.py  dialog_search_engine.py  download_manager.py  firefox_sync.py  helper_task.py  menu_history.py  menu_languages.py  menu_pages.py  pages_manager_generic.py  popover_downloads.py  popover_geolocation.py  popover_javascript.py  popover_webview.py  sites_manager.py  sites_manager_child.py  toolbar.py  toolbar_actions.py  toolbar_end.py  toolbar_title.py  utils.py  webview.py  webview_artwork.py  webview_credentials.py  webview_errors.py  webview_helpers.py  webview_navigation.py  webview_night_mode.py  webview_signals.py  webview_signals_js.py  webview_signals_menu.py  widget_bookmark_edit.py  widget_bookmark_rating.py  widget_find.py  (+1 more)
